<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:orientation="vertical">


    <include layout="@layout/custom_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_3x"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLayout"
            style="@style/FontRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                style="@style/FontRegular"
                android:padding="@dimen/unit_2x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:gravity="top|left"
                android:hint="@string/username_or_email"
                android:inputType="textEmailAddress"
                tools:text="aleesha@test.com"
                android:singleLine="true"
                android:textSize="@dimen/font_16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            style="@style/FontRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_3x"
            app:hintTextColor="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                style="@style/FontRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/unit_2x"
                android:cursorVisible="true"
                android:gravity="top|left"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:text="aleesha123"
                android:singleLine="true"
                android:textSize="@dimen/font_16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/colorAccent"
            android:layout_marginTop="@dimen/margin_3x"
            android:text="@string/login" />

        <TextView
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_3x"
            style="@style/FontRegular"
            android:gravity="center_horizontal"
            android:text="Create New Account" />

        <TextView
            style="@style/FontBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_3x"
            android:text="--- OR ---"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Continue with Gmail"
            android:layout_marginTop="@dimen/margin_3x"/>

    </LinearLayout>
</LinearLayout>