<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorSelectedState"
    android:orientation="vertical">

    <include layout="@layout/custom_toolbar" />

   <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:fillViewport="true"
       app:layout_behavior="@string/appbar_scrolling_view_behavior">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">

           <com.smarteist.autoimageslider.SliderLayout
               android:layout_width="match_parent"
               android:layout_height="300dp"
               android:layout_alignParentTop="true"
               android:visibility="gone"
               android:id="@+id/imageSlider"/>

           <ImageView
               android:id="@+id/image"
               android:layout_width="match_parent"
               android:layout_height="300dp"
               android:scaleType="fitXY"
               android:background="@color/colorAccent"
               android:layout_alignParentTop="true"/>


           <LinearLayout
               android:layout_margin="@dimen/margin_2x"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <TextView
                   android:id="@+id/titleTv"
                   style="@style/FontRegular"
                   android:visibility="gone"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="start|center_horizontal"
                   android:layout_marginTop="@dimen/margin_2x"
                   android:textStyle="bold"
                   android:textColor="@color/colorBlack"
                   android:textSize="@dimen/text_size_very_large"
                   android:text="@string/title" />

               <TextView
                   android:id="@+id/descriptionTv"
                   style="@style/FontRegular"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="start|center_horizontal"
                   android:layout_marginTop="@dimen/margin_1x"
                   android:textSize="@dimen/font_22sp"
                   android:textStyle="italic"
                   android:text="@string/description" />

               <TextView
                   android:id="@+id/price"
                   style="@style/FontRegular"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="start|center_horizontal"
                   android:layout_marginTop="@dimen/margin_1x"
                   android:textSize="@dimen/text_size_medium"
                   android:text="@string/app_name" />

               <TextView
                   android:id="@+id/shop"
                   style="@style/FontRegular"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="start|center_horizontal"
                   android:layout_marginTop="@dimen/margin_1x"
                   android:textSize="@dimen/text_size_medium"
                   android:text="@string/app_name" />

               <TextView
                   android:id="@+id/category"
                   style="@style/FontRegular"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="start|center_horizontal"
                   android:layout_marginTop="@dimen/margin_1x"
                   android:textSize="@dimen/text_size_medium"
                   android:text="@string/app_name" />

               <TextView
                   android:id="@+id/community"
                   style="@style/FontRegular"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="start|center_horizontal"
                   android:layout_marginTop="@dimen/margin_1x"
                   android:textSize="@dimen/text_size_medium"
                   android:text="@string/app_name" />

               <TextView
                   android:id="@+id/country"
                   style="@style/FontRegular"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="start|center_horizontal"
                   android:layout_marginTop="@dimen/margin_1x"
                   android:textSize="@dimen/text_size_medium"
                   android:text="@string/app_name" />

           </LinearLayout>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="5dp"
               android:text="Reviews"
               android:textSize="@dimen/text_size_very_large"
               android:textColor="@android:color/black"
               android:layout_marginLeft="@dimen/margin_2x" />

           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/recyclerViewReview"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_marginRight="15dp"
               android:layout_marginLeft="@dimen/margin_2x"
               android:layout_marginTop="5dp"
               android:scrollbars="vertical"/>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="16dp"
               android:layout_marginRight="16dp"
               android:layout_marginTop="5dp"
               android:layout_marginBottom="20dp"
               android:orientation="vertical"
               android:background="@drawable/add_review_background">


               <RatingBar
                   android:id="@+id/rating"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:isIndicator="false"
                   style="?android:attr/ratingBarStyle"
                   android:max="5"
                   android:theme="@style/RatingBar"
                   android:layout_gravity="center_horizontal"
                   android:stepSize="1" />



               <EditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/editTextReview"
                   android:inputType="textMultiLine"
                   android:layout_marginTop="5dp"
                   android:minLines="4"
                   android:gravity="start"
                   android:padding="15dp"
                   android:background="@null"
                   android:hint="Write your review here..." />


           </LinearLayout>

           <LinearLayout
               android:id="@+id/submitReview"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginRight="20dp"
               android:layout_marginLeft="20dp"
               android:layout_marginBottom="20dp"
               android:backgroundTint="@color/colorAccent"
               android:background="@drawable/add_review_background">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="Submit"
                   android:textSize="22sp"
                   android:textAlignment="center"
                   android:padding="7dp"
                   android:textColor="@android:color/white"
                   android:layout_gravity="center_horizontal"/>
           </LinearLayout>

       </LinearLayout>


   </androidx.core.widget.NestedScrollView>

</LinearLayout>
